Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15929

Screensaver preview window-over garbage on XP

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • RosDlls
    • None

    Description

      I ran ReactOS' display CPL on my ordinary XP machine, dragged some window over screensaver preview.
      This results in blanked background that gets drawn over, at the mercy of the screensaver.

      I tested the same conditions with actual XP display CPL, which doesn't create above issues.

      Attachments

        1. saver-fix.patch
          0.4 kB
        2. saver-fix.patch
          0.6 kB
        3. saver-fix.patch
          0.8 kB
        4. saver-fix-2.patch
          0.4 kB
        5. unknown[3].png
          unknown[3].png
          12 kB

        Issue Links

          Activity

            People

              binarymaster Stas'M
              404notfound 404notfound
              Votes:
              4 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: